--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,12 @@
       <div class="row no-gutters" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
          <div class="col-md-6  align-self-end order-md-2" *ngIf="screenWidth > 770">
             <div class="bannerImg_sec d-none d-md-block">
-               <img [src]="homepage.topsection.image.link" class="w-100" [alt]="homepage.topsection.image.alt" />
+               <picture>
+                  <source [srcset]="homepage.topsection.image.link_webp" type="image/webp">
+                  <source [srcset]="homepage.topsection.image.link" type="image/png"> 
+                  <img [src]="homepage.topsection.image.link" [alt]="homepage.topsection.image.alt" class="w-100" />
+               </picture>
+               <!-- <img [src]="homepage.topsection.image.link" class="w-100" [alt]="homepage.topsection.image.alt" /> -->
             </div>
          </div>
          <div class="col-md-6 align-self-center">
@@ -29,7 +34,7 @@
                   <div class="hrLine mrg-b-30" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300"></div>
                   <div class="bannerTxt" [innerHTML]="topsectionContent" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">                 
                   </div>
-                  <div class="btnSec">
+                  <div class="btnSec mrg-b-30">
                      <div class="" data-aos="fade-up" data-aos-duration="700" data-aos-delay="500"> 
                         <a [href]="homepage.topsection.button_link" target="_blank" class="pagebtn f-w-B">
                         {{homepage.topsection.button_text}}
@@ -47,16 +52,7 @@
 <div class="spacer_t_30 spacer_b_30 bg-white" *ngIf="homepage">
    <div class="main-container">
       <div class="row rowSpace">
-         <div class="col-md-6 order-md-2">
-            <div class="aboutDCC_img justify-content-center">
-               <div class="abtdcc_imgSec_1" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
-                  <img [src]="homepage.aboutsection.image1.link" class="w-100" [alt]="homepage.aboutsection.image1.alt">
-               </div>
-               <div class="abtdcc_imgSec_2" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
-                  <img [src]="homepage.aboutsection.image2.link" class="w-100" [alt]="homepage.aboutsection.image2.alt">
-               </div>
-            </div>
-         </div>
+         
          <div class="col-md-6 align-self-center">
             <div class="aboutDCC_wrap">
                <div class="" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
@@ -74,6 +70,26 @@
                   <a [routerLink]="homepage.aboutsection.button_link" class="pagebtn f-w-B">
                   {{homepage.aboutsection.button_text}}
                   </a>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 order-md-2">
+            <div class="aboutDCC_img justify-content-center">
+               <div class="abtdcc_imgSec_1" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
+                  <!-- <img [src]="homepage.aboutsection.image1.link" class="w-100" [alt]="homepage.aboutsection.image1.alt"> -->
+                  <picture>
+                     <source [srcset]="homepage.aboutsection.image1.link_webp" type="image/webp">
+                     <source [srcset]="homepage.aboutsection.image1.link" type="image/png"> 
+                     <img src="homepage.aboutsection.image1.link" [alt]="homepage.aboutsection.image1.alt" class="w-100" />
+                  </picture>
+               </div>
+               <div class="abtdcc_imgSec_2" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
+                  <!-- <img [src]="homepage.aboutsection.image2.link" class="w-100" [alt]="homepage.aboutsection.image2.alt"> -->
+                  <picture>
+                     <source [srcset]="homepage.aboutsection.image2.link_webp" type="image/webp">
+                     <source [srcset]="homepage.aboutsection.image2.link" type="image/png"> 
+                     <img src="homepage.aboutsection.image2.link_webp" [alt]="homepage.aboutsection.image2.alt" class="w-100" />
+                  </picture>
                </div>
             </div>
          </div>
@@ -101,7 +117,7 @@
                </div>
                <div class="serviceList_sec mrg-b-60" *ngIf="services">
                   <ul class="mb-0 serviceSec" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
-                     <li class="service-item" *ngFor="let service of services" > <span class="serviceLink transtn-1">{{service.name}}</span> </li>                   
+                     <li class="service-item" *ngFor="let service of services" >  <a routerLink= "/DCC-pet-services/{{service.slug}}" class="serviceLink transtn-1">{{service.name}} </a></li>                   
                   </ul>
                </div>
                <div class="btnSec d-none d-md-block" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
@@ -124,7 +140,12 @@
                   <div class="col-6 col-md-6" *ngFor="let data of serviceList">
                      <div class="serviceBx bx-shadow text-center" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">                      
                         <div class="service_iconSec">
-                           <img [src]="data.icon.link" class="w-100" [alt]="data.icon.alt">
+                           <picture>
+                              <source [srcset]="data.icon.link_webp" type="image/webp">
+                              <source [srcset]="data.icon.link" type="image/png"> 
+                              <img src="data.icon.link_webp" [alt]="data.icon.alt" class="w-100" />
+                           </picture>
+                           <!-- <img [src]="data.icon.link" class="w-100" [alt]="data.icon.alt"> -->
                         </div>
                         <div class="serviceTxt f-w-B line_H_1">
                            {{data.name}}
@@ -180,7 +201,12 @@
             <div class="team-wrap">
                <div class="img-1" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
                   <fieldset *ngIf="homepage.teamsection.team.length > 0">
-                     <img src="{{homepage.teamsection.team[0].image.link}}" class="w-100" alt="{{homepage.teamsection.team[0].image.alt}}" />
+                     <!-- <img src="{{homepage.teamsection.team[0].image.link}}" class="w-100" alt="{{homepage.teamsection.team[0].image.alt}}" /> -->
+                     <picture>
+                        <source [srcset]="homepage.teamsection.team[0].image.link_webp" type="image/webp">
+                        <source [srcset]="homepage.teamsection.team[0].image.link" type="image/png"> 
+                        <img [src]="homepage.teamsection.team[0].image.link_webp" [alt]="homepage.teamsection.team[0].image.alt" class="w-100" />
+                     </picture>
                      <div class="content-wrap">
                         <div class="row no-gutters">
                            <div class="col-auto">
@@ -196,7 +222,12 @@
                </div>
                <div class="img-2" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
                   <fieldset *ngIf="homepage.teamsection.team.length > 0">
-                     <img src="{{homepage.teamsection.team[1].image.link}}" class="w-100" alt="{{homepage.teamsection.team[1].image.alt}}" />
+                     <!-- <img src="{{homepage.teamsection.team[1].image.link}}" class="w-100" alt="{{homepage.teamsection.team[1].image.alt}}" /> -->
+                     <picture>
+                        <source [srcset]="homepage.teamsection.team[1].image.link_webp" type="image/webp">
+                        <source [srcset]="homepage.teamsection.team[1].image.link" type="image/png"> 
+                        <img [src]="homepage.teamsection.team[1].image.link_webp" [alt]="homepage.teamsection.team[1].image.alt" class="w-100" />
+                     </picture>
                      <div class="content-wrap">
                         <div class="row no-gutters">
                            <div class="col-auto">
