--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -143,7 +143,7 @@
                            <picture>
                               <source [srcset]="data.icon.link_webp" type="image/webp">
                               <source [srcset]="data.icon.link" type="image/png"> 
-                              <img src="data.icon.link_webp" [alt]="data.icon.alt" class="w-100" />
+                              <img [src]="data.icon.link_webp" [alt]="data.icon.alt" class="w-100" />
                            </picture>
                            <!-- <img [src]="data.icon.link" class="w-100" [alt]="data.icon.alt"> -->
                         </div>
