--- a/src/app/components/contact-delhi/contact-delhi.component.html
+++ b/src/app/components/contact-delhi/contact-delhi.component.html
@@ -129,4 +129,134 @@
       </div>
    </div>
 </div>
+<div class="dc_spacer_t_90 dc_spacer_b_60" id="enquiryformid">
+      <div class="main-container">
+         <div class="row row_gutter_30" *ngIf="contact">
+            <div class="col-md-6">
+               <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
+                  <h2 class="headingSec line_H_1 mrg-b-30"  [innerHTML]="enquiryheading"></h2>
+               </div>
+               <div class="hrLine mrg-b-30" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400"></div>
+            </div>
+         </div>
+         <div class="row row_gutter_30" *ngIf="contact">
+            <div class="col-md-6">
+               <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
+                  <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="enquiryleft_content">
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-6">
+               <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
+                  <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="enquiryright_content">
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <div class="dc_spacer_t_30 dc_spacer_b_90">
+      <div class="main-container">
+         <div class="row row_gutter_30">
+            <div class="col-md-6">
+               <div class="dc_About_media_wrap mar-b-30">
+                  <ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD" *ngIf="contact">
+                     <li class="col-6" *ngIf="img1.link" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
+                        <div class="dc_wrap_abt_Img dc_rds_8">
+                        
+                           <picture>
+                              <source [srcset]="img1.link_webp" type="image/webp">
+                              <source [srcset]="img1.link" type="image/png"> 
+                              <img [src]="img1.link_webp" [alt]="img1.alt" class="w-100" />
+                           </picture>
+                        </div>
+                     </li>
+                     <li class="col-6" *ngIf="img2.link" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
+                        <div class="dc_wrap_abt_Img dc_rds_8">
+                       
+                           <picture>
+                              <source [srcset]="img2.link_webp" type="image/webp">
+                              <source [srcset]="img2.link" type="image/png"> 
+                              <img [src]="img2.link_webp" [alt]="img2.alt" class="w-100" />
+                           </picture>
+                        </div>
+                     </li>
+                     <li class="col-6" *ngIf="img3.link" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
+                        <div class="dc_wrap_abt_Img dc_rds_8">
+                        
+                           <picture>
+                              <source [srcset]="img3.link_webp" type="image/webp">
+                              <source [srcset]="img3.link" type="image/png"> 
+                              <img [src]="img3.link_webp" [alt]="img3.alt" class="w-100" />
+                           </picture>
+                        </div>
+                     </li>
+                     <li class="col-6" *ngIf="img4.link" data-aos="fade-up" data-aos-duration="700" data-aos-delay="800">
+                        <div class="dc_wrap_abt_Img dc_rds_8">
+                         
+                           <picture>
+                              <source [srcset]="img4.link_webp" type="image/webp">
+                              <source [srcset]="img4.link" type="image/png"> 
+                              <img [src]="img4.link_webp" [alt]="img4.alt" class="w-100" />
+                           </picture>
+                        </div>
+                     </li>
+                  </ul>
+               </div>
+            </div>
+            <div class="col-md-6" >
+               <div class="careers-form" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
+                  <form [formGroup]="career" enctype="multipart/form-data" (ngSubmit)="onSubmit()" >
+                  <div class="row_gutter_30">
+                     <div class="col-12">
+                        <div class="position-relative">
+                           <label class="f-s-24 f-w-B cmslabel">Name</label>
+                           <input type="text" class="form-control cmsfield" name="name" formControlName="name">
+                           <div *ngIf="f.name.errors && (f.name.dirty || f.name.touched)" >
+                              <div *ngIf="f.name.errors.required" class="errorMsg">Name is required</div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-12">
+                        <div class="position-relative">
+                           <label class="f-s-24 f-w-B cmslabel">Email Address</label>
+                           <input type="text" class="form-control cmsfield" name="email" formControlName="email">
+                           <div *ngIf="f.email.errors && (f.email.dirty || f.email.touched)" >
+                              <div *ngIf="f.email.errors.required" class="errorMsg">Email is required</div>
+                              <div *ngIf="f.email.errors.email" class="errorMsg">Email must be a valid email address</div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-12">
+                        <div class="position-relative">
+                           <label class="f-s-24 f-w-B cmslabel">Contact Number</label>
+                           <input type="text" class="form-control cmsfield" accept="number" maxlength="10" name="phoneno" formControlName="phoneno">
+                           <div *ngIf="f.phoneno.errors && (f.phoneno.dirty || f.phoneno.touched)" >
+                              <div *ngIf="f.phoneno.errors.required" class="errorMsg">Phone number is required</div>
+                              <div class="errorMsg" *ngIf="f.phoneno.errors.pattern || f.phoneno.errors.maxlength || f.phoneno.errors.minlength">Phone number must be at least 10 numbers</div>                            
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-12">
+                        <div class="position-relative">
+                           <label class="f-s-24 f-w-B cmslabel">How can we help?</label>
+                           <textarea class="form-control cmsfield tell" rows="5" name="message" formControlName="message"></textarea>
+                           <div *ngIf="f.message.errors && (f.message.dirty || f.message.touched)" >
+                              <div *ngIf="f.message.errors.required" class="errorMsg">This field is required</div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-12">
+                        <div class="d-flex justify-content-between">                        
+                           <button class="pagebtn f-w-B transtn-1" type="submit" [disabled]="!career.valid">Submit</button>
+                        </div>
+                     </div>
+                  </div>
+                  </form>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+
 </div>
