--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -9,7 +9,7 @@
                            <img src="./assets/images/404.svg" class="w-100" alt="">
                         </div>
                         <div class="errorTxt text-center spacer_b_30">
-                           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.
+                           The Resource you are looking for Might be moved or dose not exist.
                         </div>
                         <div class="backBtn spacer_b_90">
                            <ul class="list-unstyled d-flex flex-wrap justify-content-center dc_btnList-spc_60">
